<resources>
    <string name="app_name">3Food</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="horizontalImage">HorizontalImage</string>
    <string name="maps">maps</string>
    <string name="food">FRESH FOOD</string>
    <string name="searchresto">SIMPLE SEARCH</string>
    <string name="easy">EASY</string>
    <string name="foodDes">Makanan selalu enak dan fresh</string>
    <string name="easyDes">Mudah digunakan semua kalangan</string>
    <string name="searchDes">Tidak perlu bingung untuk mencari Tempat makan</string>
    =======
    <string name="sekitar">Sekitar Kamu</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="makanan">Makanan</string>
    <string name="minuman">Minuman</string>

    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="food_klik">%1$s diklik!</string>
    <string name="hapus">Hapus</string>
    <string name="pesan_hapus">Hapus mahasiswa terpilih?</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="cari_lokasi">Cari tempat makan di sekitar...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lanjut">Lanjut</string>
    <string name="selesai">Selesai</string>
    <string name="geser">Geser ></string>
    <string name="beranda">Beranda</string>
    <string name="pencarian">Pencarian</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="mau_makan_dimana">Mau makan dimana?</string>
</resources>